--- a/index.qmd
+++ b/index.qmd
@@ -1,9 +1,7 @@
-# Preface {.unnumbered}
+# Introduction {.unnumbered}
 
-This is a Quarto book.
+## About Me
 
-To learn more about Quarto books visit <https://quarto.org/docs/books>.
+Hi everyone! I am Ruijue Song. I majored in Urban Management in Central University of Finance and economy in China from 2019 to 2023.
 
-```{r}
-1 + 1
-```
+I am deeply interested in spatial data science, with a specific focus on using computational tools (like R and GEE) to automate complex urban analyses. So I hope CASA0023 will equip me with the technical skills to process and interpret satellite imagery, enabling me to move beyond traditional GIS mapping toward more advanced, data-driven environmental monitoring.
