--- a/references.bib
+++ b/references.bib
@@ -17,3 +17,46 @@
 }
 
 
+
+@article{sun2020,
+	title = {Red-Edge Band Vegetation Indices for Leaf Area Index Estimation From Sentinel-2/MSI Imagery},
+	author = {Sun, Yuanheng and Qin, Qiming and Ren, Huazhong and Zhang, Tianyuan and Chen, Shanshan},
+	year = {2020},
+	month = {02},
+	date = {2020-02},
+	journal = {IEEE Transactions on Geoscience and Remote Sensing},
+	pages = {826--840},
+	volume = {58},
+	number = {2},
+	doi = {10.1109/TGRS.2019.2940826},
+	url = {https://ieeexplore.ieee.org/document/8851397/}
+}
+
+@article{addabbo2016,
+	title = {Contribution of Sentinel-2 data for applications in vegetation monitoring},
+	author = {Addabbo, Pia and Focareta, Mariano and Marcuccio, Salvo and Votto, Claudio and Ullo, Silvia Liberata},
+	year = {2016},
+	month = {09},
+	date = {2016-09-01},
+	journal = {ACTA IMEKO},
+	pages = {44},
+	volume = {5},
+	number = {2},
+	doi = {10.21014/acta_imeko.v5i2.352},
+	url = {https://acta.imeko.org/index.php/acta-imeko/article/view/IMEKO-ACTA-05%20%282016%29-02-07},
+	langid = {en}
+}
+
+@article{wang2019,
+	title = {The role of spatial heterogeneity in detecting urban slums},
+	author = {Wang, Jiong and Kuffer, Monika and Pfeffer, Karin},
+	year = {2019},
+	month = {01},
+	date = {2019-01},
+	journal = {Computers, Environment and Urban Systems},
+	pages = {95--107},
+	volume = {73},
+	doi = {10.1016/j.compenvurbsys.2018.08.007},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0198971518301947},
+	langid = {en}
+}
