--- a/references.bib
+++ b/references.bib
@@ -60,3 +60,31 @@
 	url = {https://linkinghub.elsevier.com/retrieve/pii/S0198971518301947},
 	langid = {en}
 }
+
+@article{jia2024,
+	title = {Multiscale estimation of the cooling effect of urban greenspace in subtropical and tropical cities},
+	author = {Jia, Siqi and Wang, Yuhong and Liang, Tan Chun and Weng, Qihao and Yoo, Cheolhee and Chen, Wu and Ding, Xiaoli},
+	year = {2024},
+	month = {08},
+	date = {2024-08-01},
+	journal = {Urban Forestry & Urban Greening},
+	pages = {128390},
+	volume = {98},
+	doi = {10.1016/j.ufug.2024.128390},
+	url = {https://www.sciencedirect.com/science/article/pii/S1618866724001882},
+	langid = {canadian}
+}
+
+@article{eugeniopappalardo2023,
+	title = {Mapping urban heat islands and heat-related risk during heat waves from a climate justice perspective: A case study in the municipality of Padua (Italy) for inclusive adaptation policies},
+	author = {Eugenio Pappalardo, Salvatore and Zanetti, Carlo and Todeschi, Valeria},
+	year = {2023},
+	month = {10},
+	date = {2023-10},
+	journal = {Landscape and Urban Planning},
+	pages = {104831},
+	volume = {238},
+	doi = {10.1016/j.landurbplan.2023.104831},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0169204623001500},
+	langid = {en}
+}
