--- a/week1.qmd
+++ b/week1.qmd
@@ -36,6 +36,6 @@ These literatures reinforce the lecture’s conclusion: the best sensor is not a
 
 ## Reflection
 
-Reflecting on the "spectral feature space," I realized that remote sensing is more than just locating features, it is about **understanding the biophysical composition**, which is essential for making urban policy.
+Reflecting on the spectral feature space, I realized that remote sensing is more than just locating features, it is about **understanding the biophysical composition**, which is essential for making urban policy.
 
-For example, using red-edge bands allows us to prove if a park is biologically healthy, rather than just checking if it looks "green" on a map. However, the problem I noticed that losing spatial detail when we prioritize spectral bands is a real challenge for complex cities. If we rely on Sentinel-2’s 20m pixels to study narrow streets, we might get mixed signals (like mixing a tree with a road), which could lead to wrong decisions in policies like managing urban heat islands. This trade-off makes me realize that for complex cities, just using SNAP (GUI) might not be enough. We have to explore using coding (like R or GEE) to handle these data challenges more flexibly or perhaps combine Sentinel-2 with higher-resolution images to get the best of both worlds.
+For example, using red-edge bands allows us to prove if a park is biologically healthy, rather than just checking if it looks green on a map. However, the problem I noticed that losing spatial detail when we prioritize spectral bands is a real challenge for complex cities. If we rely on Sentinel-2’s 20m pixels to study narrow streets, we might get mixed signals (like mixing a tree with a road), which could lead to wrong decisions in policies like managing urban heat islands. This trade-off makes me realize that for complex cities, just using SNAP (GUI) might not be enough. We have to explore using coding (like R or GEE) to handle these data challenges more flexibly or perhaps combine Sentinel-2 with higher-resolution images to get the best of both worlds.
