--- a/references.bib
+++ b/references.bib
@@ -88,3 +88,62 @@
 	url = {https://linkinghub.elsevier.com/retrieve/pii/S0169204623001500},
 	langid = {en}
 }
+
+@article{xu2025,
+	title = {The differences, advantages, and disadvantages of various image compositing methods on the Google Earth Engine platform: an exploration},
+	author = {Xu, Hanqiu and Su, Guifen and Li, Chunqiang and Deng, Wenhui},
+	year = {2025},
+	month = {09},
+	date = {2025-09-03},
+	journal = {Geo-spatial Information Science},
+	pages = {1--28},
+	volume = {0},
+	number = {0},
+	doi = {10.1080/10095020.2025.2542534},
+	url = {https://doi.org/10.1080/10095020.2025.2542534},
+	note = {{\_}eprint: https://doi.org/10.1080/10095020.2025.2542534}
+}
+
+@article{chen2022,
+	title = {Land use/land cover mapping using deep neural network and sentinel image dataset based on google earth engine in a heavily urbanized area, China},
+	author = {Chen, Shudan and Lei, Fan and Dong, Shengguang and Zang, Zhuo and Zhang, Meng},
+	year = {2022},
+	month = {12},
+	date = {2022-12-13},
+	journal = {Geocarto International},
+	pages = {16951--16972},
+	volume = {37},
+	number = {27},
+	doi = {10.1080/10106049.2022.2120551},
+	url = {https://doi.org/10.1080/10106049.2022.2120551},
+	note = {{\_}eprint: https://doi.org/10.1080/10106049.2022.2120551}
+}
+
+@article{bao2023,
+	title = {Estimation of Forest Height Using Google Earth Engine Machine Learning Combined with Single-Baseline TerraSAR-X/TanDEM-X and LiDAR},
+	author = {Bao, Junfan and Zhu, Ningning and Chen, Ruibo and Cui, Bin and Li, Wenmei and Yang, Bisheng},
+	year = {2023},
+	month = {09},
+	date = {2023-09-25},
+	journal = {Forests},
+	volume = {14},
+	number = {10},
+	doi = {10.3390/f14101953},
+	url = {https://www.mdpi.com/1999-4907/14/10/1953},
+	langid = {en}
+}
+
+@article{chen2022a,
+	title = {Land use/land cover mapping using deep neural network and sentinel image dataset based on google earth engine in a heavily urbanized area, China},
+	author = {Chen, Shudan and Lei, Fan and Dong, Shengguang and Zang, Zhuo and Zhang, Meng},
+	year = {2022},
+	month = {12},
+	date = {2022-12-13},
+	journal = {Geocarto International},
+	pages = {16951--16972},
+	volume = {37},
+	number = {27},
+	doi = {10.1080/10106049.2022.2120551},
+	url = {https://doi.org/10.1080/10106049.2022.2120551},
+	note = {{\_}eprint: https://doi.org/10.1080/10106049.2022.2120551}
+}
